--- a/pug/software.pug
+++ b/pug/software.pug
@@ -30,9 +30,13 @@ html(lang="en")
 							li: a(href="#gnu") GNU Software
 							li: a(href="#gparted") Gparted
 							li: a(href="#isabelle") Isabelle
+							li: a(href="#tdf") LibreOffice
 							li: a(href="#linux") Linux
+							li: a(href="#msdos") MS-DOS
+							li: a(href="#msys2") MSYS2
 							li: a(href="#odroid") Odroid Packages
-							li: a(href="#tdf") The Document Foundation
+							li: a(href="#ros") ROS
+							li: a(href="#temple-os") Temple-OS
 							li: a(href="#vlc") VLC
 
 					.col.col--3-of-4.software-section
@@ -186,6 +190,28 @@ html(lang="en")
 							h5 Homepage:
 							a(href="https://isabelle.in.tum.de/") https://isabelle.in.tum.de/
 
+						section#tdf
+							h3 LibreOffice (Official Mirror)
+							h5 HTTP:
+							a(href="./tdf/") http://mirror.clarkson.edu/tdf/
+							br
+
+							h5 Rsync:
+							|	rsync://mirror.clarkson.edu/tdf
+							br
+							br
+
+							h5 Upstream Mirror:
+							a(href="http://rsync.documentfoundation.org/") rsync.documentfoundation.org
+							br
+
+							h5 Frequency of Updates:
+							|	4 times daily
+							br
+
+							h5 Homepage:
+							a(href="http://www.documentfoundation.org/") http://www.documentfoundation.org/
+
 						section#linux
 							h3 Linux (Including Kernel Source)
 							h5 HTTP:
@@ -208,6 +234,37 @@ html(lang="en")
 							h5 Homepage:
 							a(href="http://kernel.org") http://kernel.org
 
+						section#msdos
+							h3 MS-DOS
+							h5 HTTP:
+							a(href="./MS-DOS") http://mirror.clarkson.edu/MS-DOS
+							br
+
+							h5 Homepage: 
+							a(href="https://github.com/Microsoft/MS-DOS") https://github.com/Microsoft/MS-DOS
+
+						section#msys2
+							h3 MSYS2
+							h5 HTTP:
+							a(href="./msys2/") http://mirror.clarkson.edu/msys2/
+							br
+
+							h5 Rsync:
+							|	rsync://mirror.clarkson.edu/msys2/
+							br
+							br
+
+							h5 Upstream Mirror:
+							a(href="http://repo.msys2.org") http://repo.msys2.org
+							br
+
+							h5 Frequency of Updates:
+							|	1 times Daily
+							br
+
+							h5 Homepage:
+							a(href="https://www.msys2.org/") https://www.msys2.org/
+
 						section#odroid
 							h3 Odroid Packages
 							h5 HTTP:
@@ -221,27 +278,27 @@ html(lang="en")
 							h5 Homepage:
 							a(href="http://www.hardkernel.com/main/main.php") http://www.hardkernel.com/main/main.php
 
-						section#tdf
-							h3 The Document Foundation (Including LibreOffice)
+						section#ros
+							h3 ROS (Official Mirror)
 							h5 HTTP:
-							a(href="./tdf/") http://mirror.clarkson.edu/tdf/
+							a(href="./ros") http://mirror.clarkson.edu/ros
 							br
-
-							h5 Rsync:
-							|	rsync://mirror.clarkson.edu/tdf
-							br
-							br
-
-							h5 Upstream Mirror:
-							a(href="http://rsync.documentfoundation.org/") rsync.documentfoundation.org
-							br
-
+							
 							h5 Frequency of Updates:
-							|	4 times daily
+							| 4 times daily
 							br
 
-							h5 Homepage:
-							a(href="http://www.documentfoundation.org/") http://www.documentfoundation.org/
+							h5 Homepage: 
+							a(href="http://www.ros.org/") http://www.ros.org/
+
+						section#temple-os
+							h3 TempleOS
+							h5 HTTP:
+							a(href="./templeos") templeos
+							br
+
+							h5 Homepage: 
+							a(href="http://templeos.org/") http://templeos.org/
 
 						section#vlc
 							h3 VLC
