--- a/pug/index.pug
+++ b/pug/index.pug
@@ -31,7 +31,8 @@ html(lang="en")
 				.row.mid
 					.col.col--1-of-3
 						.img-container
-							img(src="img/debian_logo.svg")
+							a(href="./distributions.html")
+								img(src="img/ubuntu-logo32.png")
 						h2 Linux Distros
 						p.
 							We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
@@ -39,14 +40,16 @@ html(lang="en")
 							day from upstream mirrors. Learn more on the #[a(href="distributions.html") Distributions] page.
 					.col.col--1-of-3
 						.img-container
-							img(src="img/blender-plain.png")
+							a(href="./software.html")
+								img(src="img/blender-plain.png")
 						h2 Software
 						p.
 							We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
 							find out more on the #[a(href="software.html") Software] page.
 					.col.col--1-of-3
 						.img-container
-							img(src="img/tux.png")
+							a(href="./linux")
+								img(src="img/tux.png")
 						h2 Linux Kernel
 						p.
 							Versions of the Linux Kernel (Up to 4.5.X) can also be found on the #[a(href="software.html") Software]
